discussion/kv_engine/156700/156700_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38978: Gather "dcpagg" stats group in a background task

The "dcpagg" stats group includes per-connection-type aggregated values
which may become expensive to collect if there are lots of dcp streams.

To avoid this processing holding up a front end thread, move this
aggregation to a task.

Change-Id: Ib365c85d537d54e9ef0777dd84aa425004b8576c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2021-06-30 12:30:57.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-30 13:08:04.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/76/ : FAILURE

Compile error at [2021-06-30T12:59:49.948Z] ../kv_engine/engines/ep/src/ep_engine.cc:3876:34:
error: out-of-line definition of "scheduleStatTask" does not match any declaration in "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/cheshire-cat/76/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/cheshire-cat/79/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/76/ : FAILURE

Compile error at [2021-06-30T13:04:08.810Z] ../kv_engine/engines/ep/src/ep_engine.cc:3876:6:
error: no declaration matches ?void EventuallyPersistentEngine::scheduleStatTask(std::string_view, std::function<void()>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/cheshire-cat/76/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/123/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\ep_engine.cc(3877): error C2511: "void EventuallyPersistentEngine::scheduleStatTask(std::string_view,std::function<void (void)>)": overloaded member function not found in "EventuallyPersistentEngine" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-cheshire-cat/123/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/68/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3876:34: error: out-of-line definition of "scheduleStatTask" does not match any declaration in "EventuallyPersistentEngine" [clang-diagnostic-error]
void EventuallyPersistentEngine::scheduleStatTask(
                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3879:30: error: use of undeclared identifier "StatTask" [clang-diagnostic-error]
            std::make_shared<StatTask>(this, description, std::move(callback));
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:4753:31: error: use of undeclared identifier "c" [clang-diagnostic-error]
        return doConnAggStats(c, add_stat, key.substr(7));
                              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/68/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3876:34:
error: out-of-line definition of "scheduleStatTask" does not match any declaration in "EventuallyPersistentEngine" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-cheshire-cat/68/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/77/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-cheshire-cat/kv_engine/engines/ep/src/ep_engine.cc:3876:34:
error: out-of-line definition of "scheduleStatTask" does not match any declaration in "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-cheshire-cat/77/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/76/ : FAILURE

Compile error at [2021-06-30T12:33:35.661Z] ../kv_engine/engines/ep/src/ep_engine.cc:3876:34:
error: out-of-line definition of "scheduleStatTask" does not match any declaration in "EventuallyPersistentEngine"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/cheshire-cat/76/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/77/ : FAILURE

Compile error at [2021-06-30T12:55:57.220Z] ../kv_engine/engines/ep/src/ep_engine.cc:3876:6:
error: no declaration matches ?void EventuallyPersistentEngine::scheduleStatTask(std::string_view, std::function<void()>)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/cheshire-cat/77/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8938/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
